--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "supertest": "1.1.0",
     "gulp": "^3.9.0",
     "gulp-spawn-mocha": "",
-    "gulp-util": "^3.0.5",
-    "applicationinsights": ""
+    "gulp-util": "^3.0.5"
   },
   "author": "Oguz Pastirmaci"
 }
