--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mocha": "^2.2.5",
     "supertest": "1.1.0",
     "gulp": "^3.9.0",
+    "jade": "1.11.0",
     "gulp-spawn-mocha": "",
     "gulp-util": "^3.0.5"
   },
