--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "Node.js app running as a container",
   "main": "index.js",
-  "license": "Test",
+  "license": "No license",
   "dependencies": {
     "express": "~4.12.2",
     "mocha": "^2.2.5",
     "supertest": "1.1.0",
     "gulp": "^3.9.0",
-    "jade": "1.11.0",
+    "jade": "^1.11.0",
     "gulp-spawn-mocha": "",
     "gulp-util": "^3.0.5"
   },
