--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "supertest": "1.1.0",
     "gulp": "^3.9.0",
     "jade": "^1.11.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-util": "^3.0.5"
   },
   "author": "Oguz Pastirmaci"
